--- a/style.css
+++ b/style.css
@@ -169,6 +169,8 @@ body {
     padding-top: 15px;
     padding-right: 10px;
     padding-bottom: 5px;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 
